tests/e2e/gateway/00-install.yaml
apiVersion: security.brcmlabs.com/v1
kind: Gateway
metadata:
  name: ssg
spec:
  version: "10.1.00_CR3"
  license:
    accept: true
    secretName: gateway-license
  app:
    replicas: 1
    image: docker.io/caapim/gateway:10.1.00_CR3
    imagePullPolicy: IfNotPresent
    #serviceAccountName: ssg-serviceaccount
    updateStrategy:
      type: rollingUpdate
      rollingUpdate:
        maxUnavailable: 0
        maxSurge: 2
    resources:
      requests: {}
      limits: {}
    autoscaling:
      enabled: false
    cwp:
      enabled: true
      properties:
        - name: io.httpsHostAllowWildcard
          value: "true"
        - name: audit.setDetailLevel.FINE
          value: 152 7101 7103 9648 9645 7026 7027 4155 150 4716 4114 6306 4100 9655 150 151 11000 4104
    service:
      # annotations:
      type: LoadBalancer
      ports:
        - name: https
          port: 8443
          targetPort: 8443
          protocol: TCP
        - name: management
          port: 9443
          targetPort: 9443
          protocol: TCP
